# api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.migration  README.md  Taskfile.yml  apispecification.json  docker-compose.prod.yml  docker-compose.yml  schema.prisma  setup.sh
.github/workflows/: build.yml  docker.yml  tag.yml
entity/: Cargo.toml
entity/src/: credentials.rs  credentials_house.rs  expense.rs  expense_house.rs  expense_payment.rs  expense_reimbursement.rs  expense_reminder.rs  expense_shared.rs  home_insurance.rs  home_insurance_house.rs  home_waste.rs  house.rs  house_home_insurance.rs  house_note.rs  house_user.rs  lib.rs  note.rs  password.rs  permission.rs  pet.rs  pet_house.rs  prelude.rs  provider.rs  provider_house.rs  role.rs  role_permission.rs  sea_orm_active_enums.rs  settings.rs  user.rs  user_role.rs
migration/: .dockerignore  Cargo.toml  Dockerfile  start.sh
migration/src/: lib.rs  m20241016_075756_users.rs  m20241016_075850_permissions.rs  m20241016_075850_settings.rs  m20241016_101754_houses.rs  m20241021_143934_credentials.rs  m20241021_143946_expenses.rs  m20241128_102905_providers.rs  m20241128_132112_home_insurance.rs  m20241128_132448_pets.rs  m20241206_180114_notes.rs  m20241209_163350_home_waste_collection.rs  m20241209_164313_home_receipts.rs
migrations/20241015193037_ulid/: migration.sql
permission/: Cargo.toml
permission/src/: credential.rs  expense.rs  house.rs  lib.rs  permission.rs  pet.rs  provider.rs  resource.rs  role.rs  user.rs
settings/: Cargo.toml
settings/src/: bucket.rs  cache.rs  document.rs  global.rs  google.rs  lib.rs  mail.rs
src/: main.rs  prisma.rs  test_helpers.rs
src/api/: mod.rs
src/api/auth/: handler.rs  mod.rs  request.rs  response.rs
src/api/credentials/: handler.rs  request.rs  response.rs
src/api/expense/: handler.rs  request.rs  response.rs
src/api/house/: handler.rs  request.rs  response.rs
src/api/permission/: handler.rs  request.rs  response.rs
src/api/pet/: handler.rs
src/api/provider/: handler.rs  mod.rs
src/api/role/: handler.rs  mod.rs  request.rs  response.rs
src/api/settings/: handler.rs  request.rs
src/api/user/: handler.rs  mod.rs  request.rs  response.rs
src/db/: connection.rs  mod.rs  pagination.rs  schema.rs
src/db/models/: user.rs
src/db/repositories/: user.rs
src/domain/: auth.rs  credential.rs  expense.rs  house.rs  mail.rs  mod.rs  permission.rs  role.rs  user.rs
src/domain/settings/: google.rs
src/entity/: entity.rs  mod.rs  role.rs  user.rs
src/exceptions/: auth.rs  cache.rs  db.rs  entity.rs  error.rs  mod.rs  request.rs  settings.rs
src/extractors/: auth_session.rs  cache.rs  db.rs  dto.rs  filter.rs  mod.rs  pagination.rs  query.rs
src/middleware/: provider.rs
src/services/: cache.rs  encrypt.rs  entity.rs  google.rs  hash.rs  mail.rs  mod.rs  permission.rs  rbac.rs  storage.rs
src/utils/: config.rs  listmonk.rs  mod.rs  pool.rs  response.rs  route.rs  settings.rs  state.rs  tracing.rs
