[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "entity" }
settings = { path = "settings" }

actix = {version = "0.13.5"}
actix-web = {version = "4.9.0", features = []}
serde_json = {version = "1.0.133"}
serde = {version = "1.0.215", features = ["derive"]}
uuid = { version = "1.11.0", features = ["v4", "serde", "v7"]}
dotenv = {version = "0.15.0", features = []}
bb8 = "0.8.6"
bb8-redis = "0.17.0"
chrono = {version = "0.4.38", features = ["serde"]}
redis = {version = "0.27.5", features = ["serde", "uuid", "tokio-comp", "json"]}

validator = {version = "0.19.0", features = ["derive"]}
thiserror = {version = "2.0.3"}
bcrypt = {version = "0.16.0"}
actix-cors = {version = "0.7.0"}
tracing = {version = "0.1.40", features = []}
tracing-appender = {version = "0.2.3"}
tracing-subscriber = {version = "0.3.18", features = ["std", "serde_json", "serde", "local-time", "chrono", "fmt", "env-filter"]}
tracing-opentelemetry = {version = "0.28.0", features = ["thiserror"]}
opentelemetry_sdk = {version = "0.27.0", features = ["trace"]}
opentelemetry = { version = "0.27.0", features = ["trace"] }
opentelemetry-stdout = {version = "0.27.0"}

lettre = { version = "0.11.10", features = ["tokio1", "pool", "builder", "smtp-transport", "tokio1-native-tls"] }
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
reqwest = { version = "0.12.9", features = ["json"] }
deadpool-redis = {version = "0.18.0", features = ["rt_tokio_1", "serde"]}
actix-session = {version = "0.10.1", features = ["redis-pool", "redis-session"]}
config = { version = "0.14.1" }
cuid2 = "0.1.3"
anyhow = { version = "1.0.93" }
casbin = { version = "2.5.0"}
async-trait = "0.1"